--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -195,7 +195,7 @@ Sensible heat flux between leaf and air is regulated by leaf boundary layer cond
 Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD, where $g_b$ increases with wind speed and $g_s$ can decline at high VPD due to stomatal closure.
 Therefore, $T_{leaf}-T_{air}$ decreases with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999a], increases with RH (Fig. `r fig_leaf_T`c), increases with leaf size (Fig. `r fig_leaf_T`d), and decreases with $g_s$ (Fig. `r fig_leaf_T`e).
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under both humid and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, an the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. swr = short wave radiation (W/m^2^); ws = windspeed (m/s); rh= relative humidity; lw = leaf width (cm); gs = stomatal conductance (mmol m^2^/s). ](leaf_energy_balance/fig3_leafenergy.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under both humid and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, an the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. swr = short wave radiation (W/m^2^); ws = windspeed (m/s); rh= relative humidity; lw = leaf width (m); gs = stomatal conductance (mmol m^2^/s). ](leaf_energy_balance/fig3_leafenergy.png)
 
 Under hot and dry conditions, leaves face a trade-off between $T_{leaf}$ regulation and water conservation [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. 
 With adequate water, high $\lambda E$ can facilitate heat dissipation, particularly for leaves with smaller size (higher $g_b$) and larger $g_s$ [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
@@ -219,16 +219,7 @@ In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the 
 
 **Nidhi, please integrate the content below into a single paragraph. (I'm not familiar enough with the references do so confidently.)**
 
-Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).
-Closed canopies with high LAI act as an parasol, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. 
-In contrast to closed canopies, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
-This mixing and light penetration can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy. 
-The latter can result from the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. 
-
-In forests with dense canopies, including tropical and temperate broadleaf forests, leaves in the upper canopy experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ than do buffered lower-canopies, in some cases exceeding the optima for photosynthesis ($T_{opt}$) because of $g_s$-limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021a; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
-In contrast, in open forests with lower LAI, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light transmission, vertical air mixing, and still air in the lower canopy and heating from the ground [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. 
-Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020]. 
-
+Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`). Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than do buffered lower-canopies, in some cases exceeding the optima for photosynthesis ($T_{opt}$) because of $g_s$-limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021a; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. The latter can result from a combination of still air in the lower canopy, and the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020].
 
 ## Leaf traits 
 
