--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -385,7 +385,7 @@ Additional research is required to understand the mechanisms underlying these in
 ### C and water flux
 
 **Canopy trees account for the majority of forest ecosystem water and carbon cycling.**
-While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration [Fig `r fig_ecosystem`a; @kunertRevisedHydrologicalModel2017], and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. In terms of C cycling, it has been estimated that canopy strata contribute $\geq$ 64% of net daytime ~CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody aboveground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiot_sizerelated_inreview]. 
+While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration [Fig `r fig_ecosystem`a; @kunertRevisedHydrologicalModel2017], and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. In terms of C cycling, it has been estimated that canopy strata contribute $\geq$ 64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody above ground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiot_sizerelated_inreview]. 
 
 ![**Figure `r fig_ecosystem`.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 42 tropical forests from @piponiot_sizerelated_inreview.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
 
